Production-ready WhatsApp Task Manager Bot
- Updated project name to whatsapp-taskbot
- Configured for Cloudflare Pages deployment
- D1 database ready for production setup
- Environment variables configured
- Webhook endpoints ready for WhatsApp Business API

Ready for manual deployment with proper API token permissions

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "webapp",
+  "name": "whatsapp-taskbot",
   "compatibility_date": "2025-08-20",
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
@@ -9,7 +9,7 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "webapp-production",
+      "database_name": "whatsapp-taskbot-production",
       "database_id": "placeholder-for-production"
     }
   ]
