--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,8 +9,8 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "whatsapp-taskbot-production",
-      "database_id": "978a531f-c61b-4a6b-b75c-83e223704a94"
+      "database_name": "taskchat-production",
+      "database_id": "7d5f25da-f027-4fa6-a41c-687047fcd7eb"
     }
   ]
 }
